# rust-project-template

./: .gitignore  Cargo.toml  deny.toml  justfile  release-plz.toml
.github/workflows/: rolling.yml  rust_lint.yml  rust_test.yml
example/: Cargo.toml
